# endoqa_project

./: .clang-tidy  CMakeLists.txt  README.md
app/: main.cpp
docs/: 01_requirements.md  04_traceability.csv
lib/: io.cpp  io.hpp  metrics.cpp  metrics.hpp  report.cpp  report.hpp
tests/: test_metrics.cpp
